Үйлену тойға шақырту.html

--- a/Үйлену тойға шақырту.html
+++ b/Үйлену тойға шақырту.html
@@ -161,7 +161,7 @@ footer{margin-top:40px;font-size:14px;color:#777}
   <h3 style="margin: 0;">Hanzada мейрамханасы</h3>
   <p style="margin: 5px 0;">Қостанай қаласы</p>
 </a>
-<img class="map-img" src="1.JPG" alt="map" style="max-width: 50%; height: auto;">
+<img class="map-img" src="1.jpg" alt="map" style="max-width: 50%; height: auto;">
 </section>
 
 
@@ -194,3 +194,4 @@ slides[index].classList.add('active');
 
 </body>
 </html>
+
